# cpp-startup

./: CMakeLists.txt  README.md
source/: hello.cpp
